Fix build process for GitHub Pages - use client-only build and update browserslist

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
       run: npm run check
       
     - name: Build
-      run: npm run build
+      run: npm run build:client
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
