Add debugging steps to GitHub Actions and fix Vite config for production builds

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,15 @@ jobs:
     - name: Type check
       run: npm run check
       
+    - name: List files
+      run: ls -la
+      
+    - name: List client files
+      run: ls -la client/
+      
+    - name: List assets
+      run: ls -la attached_assets/
+      
     - name: Build
       run: npm run build:client
       
